--- a/reactProject/umiapp/package.json
+++ b/reactProject/umiapp/package.json
@@ -24,10 +24,17 @@
     "@ant-design/pro-layout": "^6.5.0",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
+    "immutable": "^4.1.0",
     "mobx": "^6.6.1",
+    "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.5.2",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-immutable": "^4.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1",
     "tslib": "^2.4.0",
     "umi": "^3.5.32",
     "v8-compile-cache": "^2.3.0"
@@ -35,6 +42,8 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-immutable": "^4.0.3",
+    "@types/redux-promise": "^0.5.29",
     "@umijs/plugin-sass": "^1.1.1",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.32",
