--- a/reactProject/umiapp/package.json
+++ b/reactProject/umiapp/package.json
@@ -24,12 +24,16 @@
     "@ant-design/pro-layout": "^6.5.0",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "immutable": "^4.1.0",
     "mobx": "^6.6.1",
     "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.5.2",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-immutable": "^4.0.0",
@@ -40,14 +44,18 @@
     "v8-compile-cache": "^2.3.0"
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/redux-immutable": "^4.0.3",
     "@types/redux-promise": "^0.5.29",
     "@umijs/plugin-sass": "^1.1.1",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.32",
+    "i": "^0.3.7",
     "lint-staged": "^10.0.7",
+    "npm": "^8.18.0",
     "prettier": "^2.2.0",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
